# primitive-oauth2

./: .env  .gitignore  Cargo.toml  README.md  TODO.md
examples/manual/: Cargo.toml
examples/manual/src/: main.rs
src/: authenticator.rs  errors.rs  lib.rs
src/assertions/: client.rs  mod.rs  params.rs
src/client/: authenticator.rs  authenticator_spec.rs  authenticator_test.rs  mock_client.rs  mock_client_spec.rs  mock_client_test.rs  mock_server.rs  mock_server_spec.rs  mod.rs  params.rs  params_test.rs  requests.rs  responses.rs  storage.rs  storage_spec.rs  storage_test.rs  token.rs
src/client/mock_server/: auth_route.rs  mock_server.rs  mod.rs  server_resp.rs  spec.rs  token_route.rs
src/client/mock_server/routes/: auth.rs  auth_spec.rs  mod.rs  token.rs  token_spec.rs
src/client/params/: mod.rs  spec.rs
src/client/storage/: mod.rs  spec.rs
tests/: lib.rs
